--- a/ConsultaCep/src/main/resources/templates/index.html
+++ b/ConsultaCep/src/main/resources/templates/index.html
@@ -4,11 +4,8 @@
 <head>
     <title>Resultado do CEP</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-        rel="stylesheet" />
+    <script src="script.js"></script>
+    <style src="style.css"></style>
 
 </head>
 
@@ -123,6 +120,6 @@
         margin-left:  6rem;
     }
 
-</style>
+</style> 
 
 </html>
